<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DesignOverlay</string>
    <string name="app_description">DesignOverlay will show design and grid overlay over application windows to help you verify your application layout and design.</string>

    <string name="notification_title">DesignOverlay</string>
    <string name="notification_small_text">Touch for Settings</string>
    <string name="notification_big_text">Touch for Settings</string>
    <string name="notification_action_dismiss">Dismiss</string>

    <string name="pref_category_design">Design</string>
    <string name="pref_category_grid">Grid</string>
    <string name="pref_category_about">About</string>

    <string name="pref_fullscreen_title">FullScreen</string>

    <string name="pref_design_enabled_title">Enabled</string>
    <string name="pref_design_image_title">Image</string>
    <string name="pref_design_image_summary">Choose a design image to overlay</string>
    <string name="pref_design_image_alpha_title">Alpha</string>
    <string name="pref_design_image_alpha_summary">Alpha: %1$s %</string>

    <string name="pref_grid_enabled_title">Enabled</string>
    <string name="pref_grid_size_title">Size</string>
    <string name="pref_grid_size_summary">Size: %1$s dp</string>
    <string name="pref_align_right_title">Align right</string>
    <string name="pref_align_bottom_title">Align bottom</string>
    <string name="pref_grid_color_title">Color</string>
    <string name="pref_grid_color_summary">Choose grid line color</string>

    <string name="pref_author_title">Author</string>
    <string name="pref_author_summary">Manabu</string>

    <string name="pref_app_version_title">Version</string>

    <string name="intent_chooser_choose_image">Choose an image to overlay</string>

    <string name="toast_bitmap_not_found">Error! Could not retrieve image.</string>
</resources>